--- a/client/games-project/src/App.css
+++ b/client/games-project/src/App.css
@@ -36,3 +36,17 @@ body {
 	background: var(--accent-color);
 	margin: 30px 0;
 }
+
+.input-box input {
+	width: 100%;
+	height: 100%;
+	background: transparent;
+	border: none;
+	outline: none;
+	border: 2px solid rgba(255, 255, 255, 0.2);
+	border-radius: 40px;
+}
+
+.input-box input::placeholder {
+	color: var(--white);
+}
