--- a/client/games-project/src/App.css
+++ b/client/games-project/src/App.css
@@ -21,19 +21,32 @@ body {
 	justify-content: center;
 	align-items: center;
 	min-height: 100dvh;
-	background: var(--background);
+	background: url("https://www.coolmathgames.com/sites/default/files/TicTacToe_OG-logo.jpg") no-repeat;
+	background-size: cover;
+	background-position: center;
 }
 
 .wrapper {
 	width: 420px;
-	background: var(--secondary-color);
+	background: transparent;
+	border: 2px solid rgba(255, 255, 255, 0.2);
+	backdrop-filter: blur(20px);
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 	color: var(--white);
+	border-radius: 10px;
+	padding: 30px 40px;
+}
+
+.wrapper h1 {
+	font-size: 36px;
+	text-align: center;
+	font-weight: bolder;
 }
 
 .wrapper .input-box {
 	width: 100%;
 	height: 50px;
-	background: var(--accent-color);
+	background: transparent;
 	margin: 30px 0;
 }
 
@@ -45,8 +58,47 @@ body {
 	outline: none;
 	border: 2px solid rgba(255, 255, 255, 0.2);
 	border-radius: 40px;
+	padding: 20px 45px 20px 20px;
 }
 
 .input-box input::placeholder {
 	color: var(--white);
+}
+
+/* .input-box i {
+	position: absolute;
+	right: 20px;
+	top: 50%;
+	transform: translateY(-50%);
+	font-size: 20px;
+} */
+
+.wrapper .btn {
+	width: 100%;
+	height: 45px;
+	background: var(--white);
+	border: none;
+	outline: none;
+	border-radius: 40px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	cursor: pointer;
+	font-size: 16px;
+	color: var(--black);
+	font-weight: 600;
+}
+
+.wrapper .register-link {
+	font-size: 14.5px;
+	text-align: center;
+	margin: 20px 0 15px;
+}
+
+.register-link p a {
+	color: var(--white);
+	text-decoration: none;
+	font-weight: 600;
+}
+
+.register-link p a:hover {
+	text-decoration: underline;
 }
