--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,95 +1,184 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap");
+
+:root {
+	--primary-color: #9ade7b;
+	--secondary-color: #508d69;
+	--accent-color: #c5e898;
+	--white: #f4f6ff;
+	--black: #000000;
+	--background: var(--primary-color);
 }
 
-.App {
-  width: 100dvh;
-  height: 100dvh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #76a2ff;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "Josefin Sans", sans-serif;
 }
 
 body {
-  padding: 0;
-  margin: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100dvh;
+	background: url("https://www.coolmathgames.com/sites/default/files/TicTacToe_OG-logo.jpg") no-repeat;
+	background-size: cover;
+	background-position: center;
+}
+
+.wrapper {
+	width: 420px;
+	background: transparent;
+	border: 2px solid rgba(255, 255, 255, 0.2);
+	backdrop-filter: blur(20px);
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+	color: var(--white);
+	border-radius: 10px;
+	padding: 30px 40px;
+}
+
+.wrapper h1 {
+	font-size: 36px;
+	text-align: center;
+	font-weight: bolder;
+}
+
+.wrapper .input-box {
+	width: 100%;
+	height: 50px;
+	background: transparent;
+	margin: 30px 0;
+}
+
+.input-box input {
+	width: 100%;
+	height: 100%;
+	background: transparent;
+	border: none;
+	outline: none;
+	border: 2px solid rgba(255, 255, 255, 0.2);
+	border-radius: 40px;
+	padding: 20px 45px 20px 20px;
+}
+
+.input-box input::placeholder {
+	color: var(--white);
+}
+
+/* .input-box i {
+	position: absolute;
+	right: 20px;
+	top: 50%;
+	transform: translateY(-50%);
+	font-size: 20px;
+} */
+
+.wrapper .btn {
+	width: 100%;
+	height: 45px;
+	background: var(--white);
+	border: none;
+	outline: none;
+	border-radius: 40px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	cursor: pointer;
+	font-size: 16px;
+	color: var(--black);
+	font-weight: 600;
+}
+
+.App {
+	text-align: center;
+}
+
+.App {
+	width: 100dvh;
+	height: 100dvh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #76a2ff;
+}
+
+body {
+	padding: 0;
+	margin: 0;
 }
 
 .login,
 .signUp {
-  display: flex;
-  flex-direction: column;
-  margin: 20px;
+	display: flex;
+	flex-direction: column;
+	margin: 20px;
 }
 
 .login input,
 .signUp input {
-  margin: 10px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  width: 320px;
-  height: 30px;
-  cursor: pointer;
+	margin: 10px;
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	width: 320px;
+	height: 30px;
+	cursor: pointer;
 }
 
 .login label,
 .signUp label {
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
-  color: white;
+	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 20px;
+	color: white;
 }
 
 .board {
-  width: 500px;
-  height: 500px;
-  background-color: rgb (252, 252, 252);
-  border: 1px solid black;
-  display: flex;
-  flex-direction: column;
+	width: 500px;
+	height: 500px;
+	background-color: rgb (252, 252, 252);
+	border: 1px solid black;
+	display: flex;
+	flex-direction: column;
 }
 .row {
-  flex: 33%;
-  display: flex;
-  flex-direction: row;
+	flex: 33%;
+	display: flex;
+	flex-direction: row;
 }
 
 .square {
-  flex: 33%;
-  height: 100%;
-  border: 1px solid black;
-  cursor: pointer;
-  display: grid;
-  place-items: center;
-  font-size: 30px;
-  color: black;
-  font-family: Arial, Helvetica, sans-serif;
+	flex: 33%;
+	height: 100%;
+	border: 1px solid black;
+	cursor: pointer;
+	display: grid;
+	place-items: center;
+	font-size: 30px;
+	color: black;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .square:active {
-  background-color: lightgray;
+	background-color: lightgray;
 }
 
 h4 {
-  font-family: Arial, Helvetica, sans-serif;
-  color: white;
-  font-size: 30px;
+	font-family: Arial, Helvetica, sans-serif;
+	color: white;
+	font-size: 30px;
 }
 
 .joinGame input {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  width: 220px;
-  height: 30px;
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	width: 220px;
+	height: 30px;
 }
 .joinGame button {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  width: 220px;
-  height: 51px;
-  cursor: pointer;
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	width: 220px;
+	height: 51px;
+	cursor: pointer;
 }
