--- a/client/src/App.css
+++ b/client/src/App.css
@@ -89,6 +89,7 @@ body {
 
 .App {
 	text-align: center;
+	gap: 2rem;
 }
 
 .App {
@@ -97,7 +98,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: #76a2ff;
+	background-color: transparent;
 }
 
 body {
